# mcp_github_review

./: .gitignore  README.md  pyproject.toml
src/github_review/: __init__.py  server.py
